pyinterp/pyinterp/pyinterp/tests/must_pass/math/errors/log_domain2.py
print(math.log(-math.inf))